* 2012-08-29 - thorben.betten@open-xchange.com

 - Fix for bug 22860: Prevent possible NPE in file management

* 2012-08-29 - jan.bauerdick@open-xchange.com

 - New bundle c.o.cluster.discovery.aws: Find aws nodes in cluster

* 2012-08-28 - jan.bauerdick@open-xchange.com

 - New bundle c.o.aws: Providing services to communicate with amazon web services

* 2012-08-28 - thorben.betten@open-xchange.com

 - Fix for bug 22851: Abort keep-alive run if expected first request chunk has not been received so far

* 2012-08-27 - thorben.betten@open-xchange.com

 - Fix for bug 22755: Proper Content-Disposition header when downloading a file with Safari

* 2012-08-24 - jan.bauerdick@open-xchange.com

 - Fix for bug 22838: New implementation of com.openexchange.sessiond.impl.SessionHandler.merge

* 2012-08-20 - thorben.betten@open-xchange.com

 - Fix for bug 22819: Set category to USER_INPUT for invalid or rejected Internet addresses

* 2012-08-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 22809: Send proper linebreaks in group vCards to clients

* 2012-08-20 - marcus.klein@open-xchange.com

 - Fix for bug 22803: Parse escaped characters properly from PO file without entering an endless loop.

* 2012-08-19 - thorben.betten@open-xchange.com

 - Fix for bug 22776: Set property "set-jaxb-validation-event-handler" to "false" to turn off the validation event handler.
 - Fix for bug 22735: Enable parsing of TNEF parts

* 2012-08-18 - thorben.betten@open-xchange.com

 - Fix for bug 22783: Respond unsupported auto-login feature as common "Invalid cookie." error
 - Fix for bug 22794: Applying proper map to created ListLsubEntryImpl instance to reflect its subscription status
 - Fix for bug 22795: Keep right instance of AJAXRequestData that is further used by dispatcher processing

* 2012-08-15 - marcus.klein@open-xchange.com

 - Fix for bug 22592: Corrected start script for usercopy CLT.

* 2012-08-14 - tobias.friedrich@open-xchange.com
