@@ -1,3 +1,7 @@
+* 2012-08-31 - marcus.klein@open-xchange.com
+
+ - Fix for bug 22751: Registering properly the actions for the conversion HTTP/JSON interface within dispatcher.
+
 * 2012-08-29 - thorben.betten@open-xchange.com
 
  - Fix for bug 22860: Prevent possible NPE in file management
